<resources>
    <string name="app_name">Rescue Buddy</string>
    <string name="save">Save</string>
    <string name="conti">Continue</string>


    <!--Login Activity-->
    <string name="mobile_no">Enter your mobile number</string>
    <string name="login_paswrd">Enter your password</string>
    <string name="login_or">OR</string>
    <string name="login_register">Register Here</string>


    <!--Registration Activity-->
    <string name="profile_title"><u>Complete Your Profile</u></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height( in m )</string>
    <string name="weight">Weight( in kg )</string>
    <string name="phone_no">Phone Number</string>
    <string name="register">Register</string>
    <string name="passwrd">Enter your password</string>
    <string name="re_passwrd">Reenter your password </string>


    <!--Go Bag Activity-->
    <string name="bag_weight">Your Bag Weight</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="additional">ADDITIONAL</string>

    <!--otp-->
    <string name="otp_detail">Please enter OTP which hass been \n sent to your mobile number</string>
    <string name="otp">Enter OTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
