<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrnd_color"
    android:fillViewport="true"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_imageview"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/icons8_friends_80" />

        <TextView
            android:id="@+id/login_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/btn_color"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLength="12"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/btn_color"
            android:hint="@string/login_paswrd"
            android:maxLength="40"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/login_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="120dp"
            android:alpha=".95"
            android:background="@drawable/background_login"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/conti"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>


</ScrollView>